21,05,2024,1 топ 1-4 в выдаче Sushi-casino-brazil в инкогнито 13

--- a/extra/.htaccess
+++ b/extra/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteCond %{HTTPS} off
-RewriteRule ^ https://sushi-bet-brasil.000webhostapp.com%{REQUEST_URI} [L,R=301]
+RewriteRule ^ https://sushi-casino-brazil.000webhostapp.com%{REQUEST_URI} [L,R=301]
